# ChangeLog for www-client/firefox
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/firefox/ChangeLog,v 1.61 2011/04/17 23:50:33 anarchy Exp $

  17 Apr 2011; Jory A. Pratt <anarchy@gentoo.org> firefox-4.0-r3.ebuild:
  Remove the unused gconf use_enable, bug #363865

  10 Apr 2011; Raúl Porcel <armin76@gentoo.org> firefox-3.6.16.ebuild:
  alpha/ia64 stable wrt #360055

  08 Apr 2011; Thomas Kahle <tomka@gentoo.org> firefox-3.6.16.ebuild:
  x86 stable per bug 360055

  05 Apr 2011; Markus Meier <maekke@gentoo.org> firefox-3.6.16.ebuild:
  arm stable, bug #360055

*firefox-4.0-r3 (04 Apr 2011)

  04 Apr 2011; Jory A. Pratt <anarchy@gentoo.org> -firefox-4.0-r2.ebuild,
  +firefox-4.0-r3.ebuild:
  Remove gconf dep bug #360307

  03 Apr 2011; Jeroen Roovers <jer@gentoo.org> firefox-3.6.16.ebuild:
  Stable for HPPA (bug #360055).

  27 Mar 2011; Jory A. Pratt <anarchy@gentoo.org> firefox-4.0-r2.ebuild:
  ensure cairo dep correct for FF-4

*firefox-4.0-r2 (27 Mar 2011)

  27 Mar 2011; Jory A. Pratt <anarchy@gentoo.org> -firefox-4.0-r1.ebuild,
  +firefox-4.0-r2.ebuild, +files/fix-preferences-gentoo.patch:
  Fix default gentoo preferences

  26 Mar 2011; Brent Baude <ranger@gentoo.org> firefox-3.6.16.ebuild:
  Marking firefox-3.6.16 ppc64 and ppc for bug 360055

  25 Mar 2011; Christoph Mende <angelos@gentoo.org> firefox-3.6.16.ebuild:
  Stable on amd64 wrt bug #360055

*firefox-3.6.16 (25 Mar 2011)

  25 Mar 2011; Lars Wendler <polynomial-c@gentoo.org> -firefox-3.6.13.ebuild,
  +firefox-3.6.16.ebuild:
  Security bump (bug #360055).

*firefox-4.0-r1 (23 Mar 2011)

  23 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -firefox-4.0.ebuild,
  +firefox-4.0-r1.ebuild, +files/icon/firefox.desktop:
  Install multiple hicolor icons, use one .desktop file for both branded and
  unbranded, change codename to latest, add new .desktop mimetypes from
  overlay

*firefox-4.0 (22 Mar 2011)
