@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 137-bz460917_reload_new_plugins-gentoo-update-3.6.4.patch 2473 RMD160 cfbed88e1813f4880dabb18b6a9540cf3747f7f4 SHA1 5e0d98b3e3bf3ffb5f88eef30b1af095a6f0057d SHA256 be069b468eff7f06bb0fe160dea947c081cb00e1a8cbde2bd39c52ebf9aa2984
 AUX 801-enable-x86_64-tracemonkey.patch 501 RMD160 e8341671a9ab7f05cf58735a2b862ded55d82829 SHA1 d0c194c79993c3c47a8c46726d3f024e044766a0 SHA256 20f558efbf4ed1960b390c353c7eeb94108fcdb8aaf33f1fea6caf44468aeb7c
 AUX firefox-3.0-solaris64.patch 416 RMD160 f59eaf44b797715d6116f0f151803ec6c26587c1 SHA1 c6cbd37cc2f20a1bdc347b33ff8cdd8b9e159424 SHA256 5d2f04928d820460b099a0baa92ed2d681d75b5634c21364997be216214f5597
@@ -6,8 +9,8 @@ AUX firefox.1 2538 RMD160 4564007d7d5345e9ab09c941015e3cdb78913835 SHA1 8be19874
 AUX fix-preferences-gentoo.patch 426 RMD160 83075ec3c2e4c39ba298096bd08447bb94cad34d SHA1 ffff69bcff712483d1962ce04a700748fdab24f5 SHA256 7edae5ea1efb042412d02ef00c51f5e55c4499751c240b48c7b07f69cc420d94
 AUX fix_blocklist_support.patch 3194 RMD160 87254cfdbd7fae1ed5704ecfff4ad5c691b44dba SHA1 3da1bb6544bb1b07548faa1b94bbe9fd7350dcb6 SHA256 4e0de29d5dc65b3bd9a5bb7ad1adee92056af78da66c5c1c7153dec3026931f3
 AUX gentoo-default-prefs.js 598 RMD160 9ee952b88ebee3b47f6466e2d19674805d8529d2 SHA1 980bc21282021b8be5c420155d2126c86b174068 SHA256 ad533b62fcc7e0ebbafe039e74db68734c86077178b03d37a01868cf790c42f9
-AUX icon/firefox-1.5-unbranded.desktop 258 RMD160 32ebb016d6a4d3d2728c031f3b3762796e02f5d3 SHA1 69820d445d06b90d7ac35ffd39dad5926caa0862 SHA256 f2bf5c237a5c56b443c20fd16d3da429bf3b99e9fe27b661a1a462aa46ed25d3
-AUX icon/firefox-1.5.desktop 255 RMD160 4ef1cf548f11057274620b82f0728958a3424bea SHA1 6a440f817072fb60516c1a1d999dffb6d3fa1583 SHA256 9bf6e1264d986c68d64831d166ed6b506bff6df8b56d21bfc166aee09cbc753f
+AUX icon/firefox-1.5-unbranded.desktop 303 RMD160 e9cb808302b7fbd7d4eb84aeb0a438e1f82f220b SHA1 cd5d0ce5162d9fd246360409b1af396b62c1bc6b SHA256 1d6ba1b322ba1bf3ab8e6ef92528bdbc1a2f5cbca3119df3f4380b8b73b5cb05
+AUX icon/firefox-1.5.desktop 300 RMD160 df437e79147897b0ec52b44edc42ad4ef270eda5 SHA1 b60d51629ba58992f6d9ae9ad8c29ffc6630de4d SHA256 bc6f84004032afab5c078d8dc7c4ffe36abc45738c119fad3fcfa5de89dd5dae
 AUX icon/firefox.desktop 276 RMD160 92a5671cd09e399b3330c4be31b7ac7583747031 SHA1 b757763670a00982f3cb38b8d41d7faa6eee3818 SHA256 06565ade11b6e4b448cf10339696c43f31e73cb6824491094bb6e0ab902c7cf5
 AUX xulrunner-1.9.2-arm-fixes.patch 587 RMD160 495e8037785a1867fad0c088a4c834df6f02291c SHA1 5f08ef1f65771c2891a067c7baac8a4ef8466deb SHA256 a1b0aef546deecafe64c9ce70b08e7252a3eaf8d84a381a62b5edfaf1f735817
 AUX xulrunner-1.9.2-gtk+-2.21.patch 663 RMD160 20e2465da0e6c884527fd7cfebd3bdb2f8f015a9 SHA1 f2b9c26ed255bde672ccc8cb7ae4ae014f52d6f5 SHA256 79c11dc4304d748f3c2d6e451aa6d44dd1bb450d1db671e7fa4a83420c6f2c05
@@ -314,7 +317,15 @@ DIST firefox-4.0-zu.xpi 227605 RMD160 56d91ea40c9983dc28db96af51a18cdd0b22a50d S
 DIST firefox-4.0.source.tar.bz2 66024327 RMD160 2d1a3cf0f37ddbf4a5be9b83949f8f8236e2081d SHA1 403da9dd65662e5c4dd34299214e04cb6f80575e SHA256 78b1e0a66be3604af49b81193e557c27ffaee16b8c26fead052455dd42c9150f
 EBUILD firefox-3.6.12.ebuild 9526 RMD160 09c1fbad806f8cc977bdfcf35e5661731dd8e63c SHA1 cf1b4648f7f1708c0fb33fa8ae4e2566ac73fdea SHA256 b9dbe985567f8f3e7051f73e4978e35f03e439b688eaf73c71a8a8cece7ad163
 EBUILD firefox-3.6.15.ebuild 9471 RMD160 28ae7119357771cd66d645fb833fdd5c5bba1e88 SHA1 3322fe983218f239627d1601686d6620afa70b3b SHA256 e35251d0f927bd21d63bdd9147e767d4bfc0795d499f243f74ac1d1ba5c8dc0d
+EBUILD firefox-3.6.16-r1.ebuild 9476 RMD160 af498c0e3c5783d1ed75173b14d58af5a840d789 SHA1 8bfe4954a07cab739a037e593d934f8231c9a49b SHA256 fc45024eb42483ebb403cf0a0e91295d5d14acca7e94452a5043a94ea3a2aee3
 EBUILD firefox-3.6.16.ebuild 9471 RMD160 a16c696080fbf499e31a3fbd1d8de5f1a0d72d8a SHA1 0bc4dde9a1d1b4878ff0d8ad0cb48fd4bb378449 SHA256 e95836ee1e86ace34fbebdd1ecff63864d4cf8809daf7b7e386e77c25348d0fc
 EBUILD firefox-4.0-r3.ebuild 7807 RMD160 13898a50803afa5f1a1e53b1090c7dfa47c50f86 SHA1 636b38cf85d807829d9b9e095d78c1e452e266f5 SHA256 902fa95575cc2c4c135a73250881715614e6e6a5f70a5ee424eb584609bed957
-MISC ChangeLog 126155 RMD160 b2f3bb92bb65c2e1cf9033586077eecefa89d39c SHA1 a8fe1a78007088f647cb4465a6d934883c3c4ff3 SHA256 37d6a902a7624819e6b48a20186742f7f6e97f43aa4460ecfdad5642c489ebd2
+MISC ChangeLog 126488 RMD160 9657a04ede75d22b953e42520a0a242d1a39a5ef SHA1 b1cc270ae7d9b3826397670c6dbb989bac01c4a4 SHA256 b8473ecd2877ef07308e58766e4e45573315c66068e735274182f531ef2ba47d
 MISC metadata.xml 591 RMD160 4e13e501ffacdd9001cbc15bc92e3e901463454b SHA1 9ddb97472d099fb3f65193bc7cbfcbb26e6281dc SHA256 e91f4670e55c264903dbbd321565e1d817e510dfabadaa81c9e15c7317864b23
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk23BNsACgkQXkR9YqOcLPFb5AD/diztJbZLEOXQvmXiLLSBntj1
+c29pY8s+ZvL1FCELfMYBAIeam7TKMuNOzxGw+grFgwTs9UGIZmMosKnZXK5Jdda+
+=MySU
+-----END PGP SIGNATURE-----
