@@ -1,6 +1,14 @@
 # ChangeLog for www-client/firefox
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/firefox/ChangeLog,v 1.61 2011/04/17 23:50:33 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/firefox/ChangeLog,v 1.62 2011/04/26 17:44:33 ssuominen Exp $
+
+*firefox-3.6.16-r1 (26 Apr 2011)
+
+  26 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
+  files/icon/firefox-1.5-unbranded.desktop, files/icon/firefox-1.5.desktop,
+  +firefox-3.6.16-r1.ebuild:
+  Append x-scheme-handler/http;x-scheme-handler/https; to MimeType line of
+  desktop entry. This will be required by glib stabilization.
 
   17 Apr 2011; Jory A. Pratt <anarchy@gentoo.org> firefox-4.0-r3.ebuild:
   Remove the unused gconf use_enable, bug #363865
